# HybridRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RenderGraph_Architecture_Diagrams.md  THESIS_GUIDE.md
Chimera/: CMakeLists.txt
Chimera/shaders/common/: common.glsl  fullscreen.vert  pbr.glsl  shader.frag  shader.vert  simple.frag  simple.vert  structures.glsl
Chimera/shaders/forward/: forward.frag  forward.vert
Chimera/shaders/hybrid/: deferred_lighting.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  rt_shadow_ao.rgen  svgf.comp  svgf_atrous.comp
Chimera/shaders/postprocess/: blit.frag  bloom.comp  bloom_blur.comp  bloom_threshold.comp  composition.frag  linearize_depth.comp  linearize_depth.frag  postprocess.frag  skybox.frag  taa.comp
Chimera/shaders/postprocess/svgf/: atrous.comp  combine.comp  filter_moments.comp  temporal.comp  variance_blur.comp
Chimera/shaders/raytracing/: closesthit.rchit  diffuse_gi.rgen  miss.rmiss  raygen.rgen  rayquery.frag  raytrace.rgen  reflection.rgen  rt_ao.rgen  rt_shadow.rgen  shadow.rahit  shadow.rmiss
Chimera/shaders/svgf/: atrous.comp  temporal.comp
Chimera/shaders_legacy/: deferred_lighting.frag  gbuffer.frag
Chimera/src/: Chimera.h  pch.cpp  pch.h
Chimera/src/Assets/: AssetImporter.cpp  AssetImporter.h
Chimera/src/Renderer/: Camera.h  ChimeraCommon.h  RenderState.cpp  RenderState.h  SceneRenderer.cpp  SceneRenderer.h
Chimera/src/Renderer/Backend/: DeletionQueue.h  PipelineManager.cpp  PipelineManager.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderCommon.h  ShaderManager.cpp  ShaderManager.h  ShaderMetadata.cpp  ShaderMetadata.h  ShaderRegistry.cpp  ShaderRegistry.h  ShaderResourceNames.h  ShaderStructures.h  Swapchain.cpp  Swapchain.h  VulkanCommon.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipelinePresets.h
Chimera/src/Renderer/Graph/: ComputeExecutionContext.cpp  ComputeExecutionContext.h  ExecutionContext.cpp  ExecutionContext.h  GraphicsExecutionContext.cpp  GraphicsExecutionContext.h  RaytracingExecutionContext.cpp  RaytracingExecutionContext.h  RenderGraph.cpp  RenderGraph.h  RenderGraphCommon.h  RenderGraphPass.h  ResourceNames.h
Chimera/src/Renderer/Passes/: BloomPass.cpp  BloomPass.h  CompositionPass.cpp  CompositionPass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  DepthPrepass.cpp  DepthPrepass.h  ForwardPass.cpp  ForwardPass.h  GBufferPass.cpp  GBufferPass.h  IRenderGraphPass.h  LinearizeDepthPass.cpp  LinearizeDepthPass.h  PostProcessPass.cpp  PostProcessPass.h  RTAOPass.cpp  RTAOPass.h  RTDiffuseGIPass.cpp  RTDiffuseGIPass.h  RTReflectionPass.cpp  RTReflectionPass.h  RTShadowAOPass.cpp  RTShadowAOPass.h  RTShadowPass.cpp  RTShadowPass.h  RayQueryPass.cpp  RayQueryPass.h  RaytracePass.cpp  RaytracePass.h  SVGFAtrousPass.cpp  SVGFAtrousPass.h  SVGFPass.cpp  SVGFPass.h  SkyboxPass.cpp  SkyboxPass.h  StandardPasses.cpp  StandardPasses.h  TAAPass.cpp  (+1 more)
Chimera/src/Renderer/Pipelines/: ForwardRenderPath.cpp  ForwardRenderPath.h  HybridRenderPath.cpp  HybridRenderPath.h  RayQueryRenderPath.cpp  RayQueryRenderPath.h  RayTracedRenderPath.cpp  RayTracedRenderPath.h  RenderPath.cpp  RenderPath.h  RenderPathFactory.cpp  RenderPathFactory.h
Chimera/src/Renderer/Resources/: Buffer.cpp  Buffer.h  Image.cpp  Image.h  LightManager.cpp  LightManager.h  Material.cpp  Material.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h
Chimera/src/Scene/: CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneCommon.h
Chimera/src/Utils/: VulkanBarrier.cpp  VulkanBarrier.h  VulkanDescriptorUtils.cpp  VulkanDescriptorUtils.h  VulkanScreenshot.cpp  VulkanScreenshot.h  VulkanShaderUtils.cpp  VulkanShaderUtils.h
Chimera/src/core/: Application.cpp  Application.h  Base.h  Config.h  EngineConfig.h  EntryPoint.h  FileIO.h  ImGuiLayer.cpp  ImGuiLayer.h  Implementation.cpp  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Random.cpp  Random.h  TaskSystem.cpp  TaskSystem.h  Timer.h  Timestep.h  Window.cpp  Window.h
Chimera/src/core/application/: Application.cpp  Application.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  KeyCodes.h  Layer.h
Chimera/src/core/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Chimera/src/core/scene/: CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  Scene.cpp  Scene.h
Chimera/src/core/utilities/: FileIO.h  Log.cpp  Random.cpp  Random.h  Timer.h
Chimera/src/editor/: EditorLayer.cpp  EditorLayer.h  ImGuiStyle.h
Chimera/src/gfx/core/: RenderPath.h
Chimera/src/gfx/pipeline/: Pipeline.cpp  Pipeline.h  VulkanPipelinePresets.h
Chimera/src/gfx/resources/: Buffer.cpp  Buffer.h  Image.cpp  Image.h  ResourceManager.cpp  ResourceManager.h
Chimera/src/gfx/utils/: VulkanBarrier.cpp  VulkanBarrier.h  VulkanDescriptorUtils.cpp  VulkanDescriptorUtils.h  VulkanScreenshot.cpp  VulkanScreenshot.h  VulkanShaderUtils.cpp  VulkanShaderUtils.h
Chimera/src/gfx/vulkan/: Renderer.cpp  Renderer.h  VulkanCommon.h  VulkanContext.cpp  VulkanContext.h
Chimera/src/rendering/: Render.h
Chimera/src/rendering/core/: RenderPath.h
Chimera/src/rendering/graph/: ComputeExecutionContext.cpp  ComputeExecutionContext.h  GraphicsExecutionContext.cpp  GraphicsExecutionContext.h  RaytracingExecutionContext.cpp  RaytracingExecutionContext.h  RenderGraph.cpp  RenderGraph.h
Chimera/src/rendering/graph/core/: RenderGraph.cpp  RenderGraph.h
Chimera/src/rendering/graph/execution/: ComputeExecutionContext.h  (+2 more)
Chimera/src/rendering/passes/: IRenderGraphPass.h
Chimera/src/rendering/pipelines/: ForwardRenderPath.cpp  ForwardRenderPath.h  HybridRenderPath.cpp  HybridRenderPath.h  RayTracedRenderPath.cpp  RayTracedRenderPath.h
Sandbox/: CMakeLists.txt
Sandbox/shaders/: gbuffer.frag  gbuffer.vert  hybrid_lighting.comp
Sandbox/src/: SandboxApp.cpp
Sandbox/src/editor/: EditorLayer.cpp  EditorLayer.h  ImGuiStyle.h
(+50 files in other folders)
